objects/LLC_BI__Collateral__c.object
<CustomObject>
    <description>Something pledged as security for repayment of a loan, to be forfeited in the event of a default.</description>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <description>Date of Appraisal</description>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Type__c</fullName>
        <label>Appraisal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As-Is</fullName>
                </value>
                <value>
                    <fullName>As-Stabilized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_of_Leases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment of Leases &amp; Rents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brokerage_Trust_Account__c</fullName>
        <label>Brokerage/Trust Account#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <label>Certificate Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>Custom field to designate source Credit Union of object used by nCino Data Services.</description>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__APN__c</fullName>
        <description>Users populate this optional text field with the property parcel number (APN).</description>
        <inlineHelpText>Optional: Enter the property parcel number (APN).</inlineHelpText>
        <label>APN</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Advance_Rate__c</fullName>
        <description>This field is optional and auto-populates based on the Collateral type. It is the percentage of the value of Collateral that a lender uses to determine the amount of a loan.</description>
        <formula>LLC_BI__Collateral_Type__r.LLC_BI__Advance_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of the value of collateral that a lender uses to determine the amount of a loan. This is a calculated field from the Collateral Type.</inlineHelpText>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Agricultural_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox that specifies if the piece of collateral is used for agricultural purposes. Checked = True. Unchecked = False.</description>
        <label>Agricultural Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Airframe_Engine_Log_Books_Description__c</fullName>
        <description>This field is optional and manually populated. It is a text area to detail information about the airframe and engine log books that are needed when securing a loan with titled aircraft collateral.</description>
        <label>Airframe/Engine Log Books Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Airport_Home_Base__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify which airport is the home base location for the titled aircraft collateral.</description>
        <label>Airport / Home Base</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Usage__c</fullName>
        <description>Users populate this optional field with the assets estimated annual mileage or hours of operation.</description>
        <label>Annual Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Appraisal_Date__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the date of most recent collateral value assessment.</description>
        <inlineHelpText>Date of the last time the collateral value was assessed</inlineHelpText>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Assessment_Method__c</fullName>
        <description>This field is optional and manually populated. Use it to specify the method by which the collateral has been assessed.</description>
        <label>Assessment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Net Book Value</fullName>
                </value>
                <value>
                    <fullName>Property Tax Assessment</fullName>
                </value>
                <value>
                    <fullName>Internal Valuation</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Authority_Number__c</fullName>
        <description>This optional field specifies the number of owners that have the authority to pledge this asset as collateral. It is manually populated.</description>
        <inlineHelpText>The number of owners of this asset that have the authority to pledge the asset as collateral.</inlineHelpText>
        <label>Authority Number</label>
        <summaryFilterItems>
            <field>LLC_BI__Account_Collateral__c.LLC_BI__Pledging_Authority__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Account_Collateral__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Avionics_Engines_Description__c</fullName>
        <description>This field is optional and manually populated. Use this field to describe the engines in the titled aircraft collateral.</description>
        <label>Avionics / Engines Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Block__c</fullName>
        <description>This field is optional and manually populated. Use this field to note the Real Estate Block Number.</description>
        <label>Block</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Body_Style__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the body or style of titled collateral.</description>
        <label>Body Style</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Book_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox to specify that the collateral has been entered on the books. This field is typically used with Possessory Collateral types. Checked = True. Unchecked = False.</description>
        <label>Book Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and manually populated. It indicates the closest branch to the location of the collateral.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipName>Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CUSIP_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the CUSIP number for a piece of possessory collateral. A CUSIP number identifies most securities, including stocks of all registered U.S. and Canadian companies and U.S. government and municipal bonds.</description>
        <label>CUSIP Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capacity__c</fullName>
        <description>Users populate this optional field with the asset size or capacity (e.g. weight capacity, gross rail load, tonnage, etc.).</description>
        <label>Capacity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Certificated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to indicate if the bank has possession of the collateral. Checked = True, Unchecked = False.</description>
        <label>Certificated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__City__c</fullName>
        <description>This field is optional and manually populated. It indicates the city where the collateral is located.</description>
        <inlineHelpText>The city that this piece of Collateral is located at.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Affixed_to_a_Permanent_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox that specifies if the collateral is affixed to a permanent site (for example, a mobile home). Checked = True, Unchecked = False.</description>
        <label>Collateral Affixed to a Permanent Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Image__c</fullName>
        <description>An image that represents the Collateral described in the record.</description>
        <inlineHelpText>Please enter a full URL path to an image resource.</inlineHelpText>
        <label>Collateral Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Agent__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the insurance agent with which the collateral is insured.</description>
        <label>Collateral Insurance Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_City__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the city of the insurance company where the collateral is insured.</description>
        <label>Collateral Insurance City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Company__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the company where the collateral is insured.</description>
        <label>Collateral Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Phone__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the phone number of the insurance company where the collateral is insured.</description>
        <label>Collateral Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Policy_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the insurance policy number for the collateral.</description>
        <label>Collateral Insurance Policy Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_State__c</fullName>
        <description>This field is optional and manually populated. Select the state of the insurance company where the collateral is insured from the picklist.</description>
        <label>Collateral Insurance State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Street__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address of the insurance company where the collateral is insured.</description>
        <label>Collateral Insurance Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Zipcode__c</fullName>
        <description>This field is optional and manually populated. Specify the ZIP code for the address of the insurance company where the collateral is insured.</description>
        <label>Collateral Insurance Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Issued_By__c</fullName>
        <description>TThis field is optional and manually populated. Use this field to specify if the Lender or Other has issued this collateral. This field is used to map to Laser Pro and is only valid when working with a Savings/CD collateral subtype.</description>
        <label>Collateral Issued By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Other Issuer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Issuer__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the issuer of the Collateral. This field is used to map to Laser Pro and is only valid when working with a Securities collateral subtype.</description>
        <label>Collateral Issuer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Legal_Description__c</fullName>
        <description>The user populates this optional text field with the legal description of the collateral. By default, it is blank.</description>
        <inlineHelpText>Enter the legal description for the collateral.</inlineHelpText>
        <label>Collateral Legal Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Location__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the latitude and longitude of the collateral location. The field currently supports entry of up to 6 decimals.</description>
        <label>Collateral Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to store the name of the collateral.</description>
        <label>Collateral Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Rollup_Count__c</fullName>
        <description>Number field that represents the total count for all direct children of a collateral record. Used in Complex Collateral scenarios.</description>
        <label>Collateral Rollup Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This lookup field is required and manually populated. Use it to define the relationship to the collateral type.</description>
        <label>Collateral Type</label>
        <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Combined_Percent_Pledged__c</fullName>
        <description>This field is optional and automatically populated.  It is the total of all the Collateral Pledged records displayed as a percentage.</description>
        <formula>IF( OR(ISBLANK(LLC_BI__Value__c), LLC_BI__Value__c = 0) , 0, LLC_BI__Total_Pledge_Amount__c / LLC_BI__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of this collateral that has been pledged.</inlineHelpText>
        <label>Combined Percent Pledged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Commercial_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify if the collateral is used for commercial purposes. Checked = True. Unchecked = False.</description>
        <label>Commercial Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Condition__c</fullName>
        <description>Users populate this optional picklist field with the asset condition (e.g. new or used).</description>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Condo_Fees__c</fullName>
        <description>The user populates this currency field with the total monetary value of fees associated with the condo. By default, it is blank.</description>
        <inlineHelpText>Enter the total monetary value of fees associated with the condo.</inlineHelpText>
        <label>Condo Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Date__c</fullName>
        <description>This field is optional and manually populated. If a government contract is being used as collateral, use this field to specify the date the contract was entered into.</description>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the contract number of a government contract collateral.</description>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Type__c</fullName>
        <description>This field is optional and manually populated. Use this picklist field to specify the contract type as Contract or Letter Contract.</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Letter Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__County__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the county where the collateral is located.</description>
        <inlineHelpText>Collateral County</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Usage__c</fullName>
        <description>Users populate this optional field with the assets current mileage or hours of operation.</description>
        <label>Current Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Secured__c</fullName>
        <description>The user manually populates this field to indicate the debt secured by the collateral. This field links the collateral to the debt it secures.</description>
        <inlineHelpText>Indicate the debt secured by the collateral.</inlineHelpText>
        <label>Debt Secured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guarantor&apos;s debt</fullName>
                </value>
                <value>
                    <fullName>Only this debt for the applicant</fullName>
                </value>
                <value>
                    <fullName>This debt and all associated debts for the applicant with this organization</fullName>
                </value>
                <value>
                    <fullName>This debt and any future debts for the applicant with this organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Account_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the account number for a deposit account being used as collateral.</description>
        <label>Deposit Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depreciation_Term__c</fullName>
        <description>Users populate this optional field with the depreciation term (in years) of the asset.</description>
        <label>Depreciation Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depth__c</fullName>
        <description>This number field auto-populates and specifies the level of depth in a complex collateral hierarchy.  This is one of the components used to drive the visual representation of the hierarchy.</description>
        <label>Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional and manually populated. It is a text field associated with all types of collateral. Use this field to provide further description of assets being used as collateral.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Dwelling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox that specifies if the collateral is used as a place of residence. Checked = True. Unchecked = False.</description>
        <label>Dwelling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EBO_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Users populate this optional currency field with the Early Buyout Option (EBO) amount.</description>
        <label>Early Buyout Option Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EBO_Premium_Percentage__c</fullName>
        <description>Users populate this optional field with the premium percentage added for an Early Buyout Option (EBO).</description>
        <label>Early Buyout Option Premium Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EBO_Yield__c</fullName>
        <description>Users populate this optional percent field with the lessor&apos;s yield for an Early Buyout Option (EBO).</description>
        <label>Early Buyout Option Yield</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Engines_Equipment_Description__c</fullName>
        <description>This field is optional and manually populated. Use this field to further describe the engines and/or equipment of the collateral being used to secure a loan.</description>
        <label>Engines/Equipment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Existing_Beneficiaries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that there are existing beneficiaries to a Life Insurance Policy collateral being used to secure a loan.</description>
        <label>Existing Beneficiaries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FAA_Registration_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to record the FAA Registration Number on aircraft collateral. The FAA Registration Number serves the same purpose as a license plate for a motor vehicle.</description>
        <label>FAA Registration Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the first lien position.</description>
        <label>First Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>1st</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Flood_Insurance_Required_Amount__c</fullName>
        <description>The user manually populates this field with the flood insurance amount required. The minimum federal requirement for this amount is the lesser of either the outstanding principal loan balance or the value of the improved property, mobile home, or personal property used to secure the loan.</description>
        <inlineHelpText>Enter the required flood insurance amount.</inlineHelpText>
        <label>Flood Insurance Required Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Full_Address_NE__c</fullName>
        <description>This field is optional and a concatenated field for full collateral address. It contains the unencrypted address only if Platform Encryption is not used. The field cannot be encrypted as Use this field in a formula.</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Full_Address_PE__c</fullName>
        <description>This field is optional and a concatenated field for full collateral address. The field should be encrypted using Platform Encryption. The field will only be populated when Platform Encryption is enabled for the nCino Platform.</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Full_Address__c</fullName>
        <description>This field is optional and a concatenated field for full collateral address. It contains the unencrypted address for backwards compatibility. The field cannot be encrypted because it is a formula.</description>
        <formula>LLC_BI__Full_Address_NE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Tonnage__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the maximum amount of weight related to a ship&apos;s overall internal volume. When mapped to LaserPro, this field is unique to a Vessel subtype.</description>
        <label>Gross Tonnage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hard_Cost_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Users populate this optional field with the asset amount that is categorized as hard costs.</description>
        <label>Hard Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hard_Cost_Percentage__c</fullName>
        <description>The system automatically populates this field via a formula. It is used to calculate the percentage of hard cost to asset value.</description>
        <formula>IF( OR(ISBLANK(LLC_BI__Value__c), LLC_BI__Value__c = 0) , 0, LLC_BI__Hard_Cost_Amount__c / LLC_BI__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of an asset&apos;s value categorized as hard costs.</inlineHelpText>
        <label>Hard Cost Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Authority__c</fullName>
        <description>This field is optional. It auto-populates if there is an account that has authority to pledge this collateral.</description>
        <formula>LLC_BI__Authority_Number__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is there an account that has authority to pledge this collateral?</inlineHelpText>
        <label>Has Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Held_By__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify who holds ownership of the collateral being used to secure a loan. The values None, Lender, and Other Holder are mapped to LaserPro. This field applies to collateral with the Securities subtype.</description>
        <label>Held By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Other Holder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is used to select the highest level parent record in a hierarchy for the Collateral Management record.</description>
        <label>Highest</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Collaterals (Highest)</relationshipLabel>
        <relationshipName>HighestCollaterals</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>